--- a/NewIntro.ipynb
+++ b/NewIntro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5zA9lIJqgsSYczTxzX4ql",
+      "authorship_tag": "ABX9TyPoMx4nmm7/uQj6AVrrpbRb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,208 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "l6LyG7p5au6E"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l6LyG7p5au6E",
+        "outputId": "06d316a2-8811-4a29-ec16-1fdc5edd1694"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: transformers[sentencepiece] in /usr/local/lib/python3.10/dist-packages (4.35.2)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (3.13.1)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (0.20.1)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (1.23.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (23.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (6.0.1)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (2023.6.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (2.31.0)\n",
+            "Requirement already satisfied: tokenizers<0.19,>=0.14 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (0.15.0)\n",
+            "Requirement already satisfied: safetensors>=0.3.1 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (0.4.1)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (4.66.1)\n",
+            "Collecting sentencepiece!=0.1.92,>=0.1.91 (from transformers[sentencepiece])\n",
+            "  Downloading sentencepiece-0.1.99-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: protobuf in /usr/local/lib/python3.10/dist-packages (from transformers[sentencepiece]) (3.20.3)\n",
+            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers[sentencepiece]) (2023.6.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->transformers[sentencepiece]) (4.5.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers[sentencepiece]) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers[sentencepiece]) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers[sentencepiece]) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers[sentencepiece]) (2023.11.17)\n",
+            "Installing collected packages: sentencepiece\n",
+            "Successfully installed sentencepiece-0.1.99\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install transformers[sentencepiece]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import transformers"
+      ],
+      "metadata": {
+        "id": "jy-eXJSHcIqw"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "classifier = pipeline(\"sentiment-analysis\")\n",
+        "classifier([\"Ronaldo is a average player\", \"I am exciting to start Hugging face course\", \"Messi is a great player\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Iiddnl6TcUvJ",
+        "outputId": "67e4aa5c-8ef7-458d-93cb-f0aa29f2afe6"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
+            "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'label': 'POSITIVE', 'score': 0.999110996723175},\n",
+              " {'label': 'POSITIVE', 'score': 0.9998486042022705},\n",
+              " {'label': 'POSITIVE', 'score': 0.9998457431793213}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Zero-shot Classification**\n",
+        "\n",
+        "classification of texts that haven’t been labelled. Allows to specify labels to classify the text.\n",
+        "o\tThis is called Zero shot because there is no need to fine tune the model on the data to use it.\n"
+      ],
+      "metadata": {
+        "id": "crwesjbOkwFU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from transformers import pipeline\n",
+        "classifier = pipeline(\"zero-shot-classification\")\n",
+        "classifier([\"Rahul Gandhi is a great leader\", \"Youtube is a great place for education\"], candidate_labels=[\"education\", \"politics\", \"general knowledge\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aCGTQxyFkz5j",
+        "outputId": "7dace9d9-2ab5-4bca-901d-5705119162b5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "No model was supplied, defaulted to facebook/bart-large-mnli and revision c626438 (https://huggingface.co/facebook/bart-large-mnli).\n",
+            "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'sequence': 'Rahul Gandhi is a great leader',\n",
+              "  'labels': ['politics', 'general knowledge', 'education'],\n",
+              "  'scores': [0.908769965171814, 0.067057766020298, 0.024172279983758926]},\n",
+              " {'sequence': 'Youtube is a great place for education',\n",
+              "  'labels': ['education', 'general knowledge', 'politics'],\n",
+              "  'scores': [0.9702320098876953, 0.023933976888656616, 0.005833959206938744]}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "** Text Generation **\n",
+        "Usage of pipeline to genarate some text.\n",
+        "Provide a prompt and the model will auto-complete it by generating the remaining text.\n",
+        "Two useful arguments; num_return_sequences, max_length"
+      ],
+      "metadata": {
+        "id": "DsD5xHlGoN7u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "generator = pipeline(\"text-generation\")\n",
+        "generator(\"The climate today is hot so\", num_return_sequences = 5, max_length = 20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qfyQx-oipTLS",
+        "outputId": "4298f9f1-af85-4775-a879-7fa70518bb68"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "No model was supplied, defaulted to gpt2 and revision 6c0e608 (https://huggingface.co/gpt2).\n",
+            "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:72: UserWarning: \n",
+            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
+            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
+            "You will be able to reuse this secret in all of your notebooks.\n",
+            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
+            "  warnings.warn(\n",
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'generated_text': 'The climate today is hot so why isn\\'t it warming in some cases?\"\\n\\nShe did not'},\n",
+              " {'generated_text': \"The climate today is hot so I feel I'm right in the middle here as far as the carbon\"},\n",
+              " {'generated_text': \"The climate today is hot so people like to live on the fringes so that they won't have\"},\n",
+              " {'generated_text': \"The climate today is hot so it's a very difficult thing to deal with. So people have a\"},\n",
+              " {'generated_text': 'The climate today is hot so we can\\'t put on clothes just because the temperature is rising.\"\\n'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     }
   ]
 }
